Remove unuse line

--- a/app/views/layouts/header.html.erb
+++ b/app/views/layouts/header.html.erb
@@ -1,3 +1,3 @@
-<div class="page-header">
+<header class="header">
   <h1><a href=""><img src="https://www.cpe.ku.ac.th/wp-content/uploads/2014/08/logo_blue2-1.jpg" alt="Department Of Computer Engineering Logo"></a></h1>
-</div>
+</header>
