--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,2 +1,20 @@
-<h1>StaticPages#about</h1>
-<p>Find me in app/views/static_pages/about.html.erb</p>
+<% provide(:title, "About") %>
+<h1 class="">About</h1>
+<h1 class="" style="color: #366353;">Overview of our Department</h1>
+<div style="max-width:800px;" class="container center-block">
+    <p>Our Department of Computer Engineering in the Faculty of Engineering, Kasetsart University, was founded on February 3rd, 1989 with the mission to teach, research, develop and service in related areas such that our graduates will meet the market need in
+  Thailand as well as the region. Currently, the department is offering degrees in computer engineering, information technology, software engineering and knowledge engineering as follow:</p>
+<ul>
+  <li>Bachelor of Engineering in Computer Engineering</li>
+  <li>Bachelor of Engineering in Software and Knowledge Engineering</li>
+  <li>Master of Science in Information Technology</li>
+  <li>Master of Engineering in Computer Engineering</li>
+  <li>Doctor of Engineering in Computer Engineering</li>
+</ul>
+<p>In addition to our course offerings, many research units have been founded by faculty members in our department, ranging from development centers and specific research centers to research laboratories. These units are either under the umbrella of the
+  university, the faculty or our department. This leads to the cooperation in research within the university as well as institutions inside and outside the country. Most of our researches have funding from the university, the Royal Thai government, foreign
+  governments and several companies both inside and outside the country.</p>
+<p>Our department encourages our students, staffs, researchers and faculty members to continuously and repeatedly advance the knowledge in the area. We support our members in several ways from participating in academic training, publishing papers in conferences
+  and seeking cooperation with experts in related area worldwide.</p>
+<p>Our vision is to continuously take a lead role in education, training and research in computer engineering to make our graduates fully prepared and ready for the rapidly growing industry in Thailand as well as the region.</p>
+</div>
