--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,9 @@
   </head>
 
   <body>
+    <%= render 'layouts/navbar' %>
+    <!--padding-->
+    <div class="padding"></div>
     <div style="max-width:800px;" class="container center-block">
       <%= yield %>
     </div>
