--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,7 +1,7 @@
 <% provide(:title, "About") %>
+<img class="img-responsive" src="https://www.cpe.ku.ac.th/wp-content/uploads/2014/09/DSCF3342-960x350.jpg">
 <h1 class="">About</h1>
 <h1 class="" style="color: #366353;">Overview of our Department</h1>
-<div style="max-width:800px;" class="container center-block">
     <p>Our Department of Computer Engineering in the Faculty of Engineering, Kasetsart University, was founded on February 3rd, 1989 with the mission to teach, research, develop and service in related areas such that our graduates will meet the market need in
   Thailand as well as the region. Currently, the department is offering degrees in computer engineering, information technology, software engineering and knowledge engineering as follow:</p>
 <ul>
@@ -17,4 +17,3 @@
 <p>Our department encourages our students, staffs, researchers and faculty members to continuously and repeatedly advance the knowledge in the area. We support our members in several ways from participating in academic training, publishing papers in conferences
   and seeking cooperation with experts in related area worldwide.</p>
 <p>Our vision is to continuously take a lead role in education, training and research in computer engineering to make our graduates fully prepared and ready for the rapidly growing industry in Thailand as well as the region.</p>
-</div>
