change to thai about page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <head>
     <title><%= yield(:title) %> | Department of Computer Engineering - Kasetsart University</title>
       <%= csrf_meta_tags %>
