Arrange the code in _header and add new page cpeCourse

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,5 @@
 <header class="header">
   <div class="container">
-  <a href="/home"><img class="img-responsive" src="https://www.cpe.ku.ac.th/wp-content/uploads/2014/08/logo_blue2-1.jpg" alt="Department Of Computer Engineering Logo"></a>
+  <a href="/home"><img Error: source does not appear to be markup.e" src="https://www.cpe.ku.ac.th/wp-content/uploads/2014/08/logo_blue2-1.jpg" alt="Department Of Computer Engineering Logo"></a>
   </div>
 </header>
