edit page style

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,7 +1,7 @@
 <% provide(:title, "About") %>
 <img class="img-responsive" src="https://www.cpe.ku.ac.th/wp-content/uploads/2014/09/DSCF3342-960x350.jpg">
 <h1 class="">ประวัติภาควิชา</h1>
-<h1 class="" style="color: #366353;">ภาควิชาวิศวกรรมคอมพิวเตอร์</h1>
+<h2 class="topic">ภาควิชาวิศวกรรมคอมพิวเตอร์</h1>
 
 <p>ภาควิชาวิศวกรรมคอมพิวเตอร์ คณะวิศวกรรมศาสตร์ มหาวิทยาลัยเกษตรศาสตร์ วิทยาเขตบางเขน ถูกก่อตั้งอย่างเป็นทางการเมื่อวันที่ 3 กุมภาพันธ์ พ.ศ. 2532 โดยมีพันธกิจที่จะต้องดำเนินการสอน การวิจัย การสะสมองค์ความรู้ และการบริการวิชาการ ตามความชำนาญของภาควิชาฯ ผนวกกับการทำนุบำรุงศิลปวัฒนธรรมและรักษาเอกลักษณ์ของประเทศ ทั้งนี้ให้เป็นไปตามความต้องการของประเทศ ซึ่งภาควิชาฯ ได้ดำเนินการเพื่อสนองพันธกิจข้างต้น ด้วยการพัฒนาภาควิชาฯ ให้มีศักยภาพและความชำนาญในสาขาต่าง ๆ คือ สาขาวิศวกรรมคอมพิวเตอร์ สาขาเทคโนโลยีสารสนเทศ สาขาวิศวกรรมซอฟต์แวร์ และสาขาวิศวกรรมความรู้</p>
 <p>ในส่วนการเรียนการสอน ภาควิชาฯ ได้เปิดหลักสูตรเพื่อสนองความต้องการของประเทศจำนวน 5 หลักสูตร แบ่งเป็นหลักสูตรระดับปริญญาตรี 1 หลักสูตร หลักสูตรนานาชาติระดับปริญญาตรี 1 หลักสูตร หลักสูตรระดับปริญญาโท 2 หลักสูตร และหลักสูตรระดับปริญญาเอก 1 หลักสูตร คือ</p>
