--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,7 +1,9 @@
-<nav class="navbar-fixed-top">
-    <div style="background-color: green;">
-        <div class="col-md-1"><a href="#home">Home</a></div> 
-        <div class="col-md-1"><a href="#home">About</a></div> 
-        <div class=""><a href="#home">Contact</a></div>
-        </div>
+# <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+<nav class="navbar navbar-fixed-top" style="background-color: #6BEA34">
+    <ul class="nav navbar-nav">
+        <li role="presentation"><a href="/">หน้าแรก</a></li>
+        <li role="presentation" class"dropdown"><a href="#">หลักสูตร</a></li>
+        <li role="presentation"><a href="/about">เกี่ยวกับเรา</a></li>
+        <li role="presentation"><a href="/contact">ติดต่อเรา</a></li>
+    </ul>
 </nav>
