change to green pastale

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,5 +1,5 @@
 # <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-<nav class="navbar navbar-fixed-top" style="background-color: #6BEA34">
+<nav class="navbar navbar-fixed-top" style="background-color: #89E894">
     <ul class="nav navbar-nav">
         <li role="presentation"><a href="/">หน้าแรก</a></li>
         <li role="presentation" class"dropdown"><a href="#">หลักสูตร</a></li>
