--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -2,7 +2,12 @@
 <nav class="navbar navbar-fixed-top" style="background-color: #6BEA34">
     <ul class="nav navbar-nav">
         <li role="presentation"><a href="/">หน้าแรก</a></li>
-        <li role="presentation" class"dropdown"><a href="#">หลักสูตร</a></li>
+        <li role="presentation" class"dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">หลักสูตร</a>
+            <ul class="dropdown-menu">
+                <li><a href="#">วิศวกรรมคอมพิวเตอร์</a></li>
+                <li><a href="#">วิศวกรรมซอร์ฟแวร์</a></li>
+            </ul>
+        </li>
         <li role="presentation"><a href="/about">เกี่ยวกับเรา</a></li>
         <li role="presentation"><a href="/contact">ติดต่อเรา</a></li>
     </ul>
