--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -4,7 +4,7 @@
         <li role="presentation"><a href="/">หน้าแรก</a></li>
         <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">หลักสูตร<b class="caret"></b></a>
             <ul class="dropdown-menu">
-                <li><a href="#">วิศวกรรมคอมพิวเตอร์</a></li>
+                <li><a href="/cpe_course">วิศวกรรมคอมพิวเตอร์</a></li>
                 <li><a href="#">วิศวกรรมซอร์ฟแวร์</a></li>
             </ul>
         </li>
