--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,80 @@
-<h1>StaticPages#home</h1>
-<p>Find me in app/views/static_pages/home.html.erb</p>
+<h1>Home</h1>
+<div class="column column-wide column-wide-parent column-last">
+
+    <div class="cleaner">&nbsp;</div>
+
+    <div class="column column-full column-last">
+
+        <div class="widget-1 widget-odd widget-0 widget feature-posts" id="wpzoom-feature-posts-5">
+            <ul class="posts posts-archive posts-side">
+                <li>
+                    <div class="post-cover">
+                        <a href="https://www.cpe.ku.ac.th/?p=3825" title="“KuAcar” คว้าอันดับ2 การแข่งขันรถจำลองไร้คนขับ AMAS MBD 2016"><img src="https://www.cpe.ku.ac.th/wp-content/uploads/2017/02/16837886_10154867331038046_691987547_n.jpg" alt="“KuAcar” คว้าอันดับ2 การแข่งขันรถจำลองไร้คนขับ AMAS MBD 2016" class="Thumbnail thumbnail loop-main " width="210" height="100"></a>
+                    </div>
+                    <div class="post-excerpt">
+                        <h2>
+                            <a href="https://www.cpe.ku.ac.th/?p=3825" title="Permalink to “KuAcar” คว้าอันดับ2 การแข่งขันรถจำลองไร้คนขับ AMAS MBD 2016" rel="bookmark">“KuAcar” คว้าอันดับ2 การแข่งขันรถจำลองไร้คนขับ AMAS MBD 2016</a>
+                        </h2>
+                        <p class="post-meta">
+                            <span>
+                                <time datetime="2017-02-22" pubdate="">22nd February 2017</time>
+                                /
+                                <span></span>
+                            </span>
+                        </p>
+                        <!-- .post-meta -->
+                    </div>
+                    <!-- .post-excerpt -->
+                    <div class="cleaner">&nbsp;</div>
+                </li>
+                <li>
+                    <div class="post-cover">
+                        <a href="https://www.cpe.ku.ac.th/?p=3822" title="เปิดรับสมัครผู้สนใจเข้าศึกษาต่อ ระดับปริญญาโทและปริญญาเอก"><img src="http://cpeg.cpe.ku.ac.th/wp-content/uploads/2016/12/11979685575_18b2bf40e9_b-1.png" alt="เปิดรับสมัครผู้สนใจเข้าศึกษาต่อ ระดับปริญญาโทและปริญญาเอก" class="Thumbnail thumbnail loop-main " width="210" height="100"></a>
+                    </div>
+                    <div class="post-excerpt">
+                        <h2>
+                            <a href="https://www.cpe.ku.ac.th/?p=3822" title="Permalink to เปิดรับสมัครผู้สนใจเข้าศึกษาต่อ ระดับปริญญาโทและปริญญาเอก" rel="bookmark">เปิดรับสมัครผู้สนใจเข้าศึกษาต่อ ระดับปริญญาโทและปริญญาเอก</a>
+                        </h2>
+                        <p class="post-meta">
+                            <span>
+                                <time datetime="2017-01-23" pubdate="">23rd January 2017</time>
+                                /
+                                <span></span>
+                            </span>
+                        </p>
+                        <!-- .post-meta -->
+                    </div>
+                    <!-- .post-excerpt -->
+                    <div class="cleaner">&nbsp;</div>
+                </li>
+                <li>
+                    <div class="post-cover">
+                        <a href="https://www.cpe.ku.ac.th/?p=3813" title="โครงการเรียนล่วงหน้า ระดับบัณฑิตศึกษา ภาคปลาย ปีการศึกษา 2559"><img src="https://www.cpe.ku.ac.th/wp-content/uploads/2016/12/APP-59-2-study-advance.jpg" alt="โครงการเรียนล่วงหน้า ระดับบัณฑิตศึกษา ภาคปลาย ปีการศึกษา 2559" class="Thumbnail thumbnail loop-main " width="210" height="100"></a>
+                    </div>
+                    <div class="post-excerpt">
+                        <h2>
+                            <a href="https://www.cpe.ku.ac.th/?p=3813" title="Permalink to โครงการเรียนล่วงหน้า ระดับบัณฑิตศึกษา ภาคปลาย ปีการศึกษา 2559" rel="bookmark">โครงการเรียนล่วงหน้า ระดับบัณฑิตศึกษา ภาคปลาย ปีการศึกษา 2559</a>
+                        </h2>
+                        <p class="post-meta">
+                            <span>
+                                <time datetime="2016-12-15" pubdate="">15th December 2016</time>
+                                /
+                                <span></span>
+                            </span>
+                        </p>
+                        <!-- .post-meta -->
+                    </div>
+                    <!-- .post-excerpt -->
+                    <div class="cleaner">&nbsp;</div>
+                </li>
+            </ul>
+            <div class="cleaner">&nbsp;</div>
+        </div>
+        <div class="cleaner">&nbsp;</div>
+
+    </div>
+    <!-- end .column .column-wide -->
+
+    <div class="cleaner">&nbsp;</div>
+
+</div>
