remote footer img

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,9 +1,8 @@
 <footer>
-<div class = "container" style="height: 100px; background-color: #89E894; color: white; text-shadow: 2px 2px 2px black;" >
-
-<img class = "img-responsive" src= "http://www.edu.ku.ac.th/images/logoku2.png" width="80px" height="80px">
-
-Copyright © 2017 Department of Computer Engineering. All Rights Reserved.
+<div style="background-color: #89E894; color: white; text-shadow: 2px 2px 2px black;" >
+    <div class="container">
+        <p class="pull-right">Copyright © 2017 Department of Computer Engineering. All Rights Reserved.</p>
+    </div>
 </div>
 
 </footer>
