--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,13 +1,9 @@
- <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">-->
+<!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">-->
 <nav class="navbar navbar-fixed-top" style="background-color: #89E894">
     <ul class="nav navbar-nav">
         <li role="presentation"><a href="/">หน้าแรก</a></li>
-        <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">หลักสูตร<b class="caret"></b></a>
-            <ul class="dropdown-menu">
-                <li><a href="/cpe_course">วิศวกรรมคอมพิวเตอร์</a></li>
-                <li><a href="#">วิศวกรรมซอร์ฟแวร์</a></li>
-            </ul>
-        </li>
+         <li role="presentation"><a href="/cpe_course">วิศวกรรมคอมพิวเตอร์</a></li>
+          <li role="presentation"><a href="/ske_course">วิศวกรรมซอร์ฟแวร์</a></li>
         <li role="presentation"><a href="/about">เกี่ยวกับเรา</a></li>
         <li role="presentation"><a href="/contact">ติดต่อเรา</a></li>
     </ul>
