Add change in cpe_course

--- a/app/views/static_pages/cpe_course.html.erb
+++ b/app/views/static_pages/cpe_course.html.erb
@@ -1,14 +1,14 @@
 <div class="container">
     <h1>Bachelor of Engineering in Computer Engineering</h1>
     <h2>
-        <i>ชื่อหลักสูตร</i>
+        ชื่อหลักสูตร
     </h2>
     <strong>ภาษาไทย</strong>
     วิิศวกรรมศาสตรบัณฑิต สาขาวิชาวิศวกรรมคอมพิวเตอร์<br>
     <strong>ภาษาอังกฤษ</strong>
     Bachelor of Engineering Program in Computer Engineering
     <h2>
-        <i>ชื่อปริญญา</i>
+        ชื่อปริญญา
     </h2>
     <strong>ชื่อเต็ม</strong>
     วิศวกรรมศาสตรบัณฑิต (วิศวกรรมคอมพิวเตอร์)<br>
