Delete ฺ in cpe_course

--- a/app/views/static_pages/cpe_course.html.erb
+++ b/app/views/static_pages/cpe_course.html.erb
@@ -4,7 +4,7 @@
         ชื่อหลักสูตร
     </h2>
     <strong>ภาษาไทย</strong>
-    วิิศวกรรมศาสตรบัณฑิต สาขาวิชาวิศวกรรมคอมพิวเตอร์<br>
+    วิศวกรรมศาสตรบัณฑิต สาขาวิชาวิศวกรรมคอมพิวเตอร์<br>
     <strong>ภาษาอังกฤษ</strong>
     Bachelor of Engineering Program in Computer Engineering
     <h2>
