--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,10 +1,18 @@
 <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">-->
 <nav class="navbar navbar-fixed-top" style="background-color: #89E894">
-    <ul class="nav navbar-nav">
-        <li role="presentation"><a href="/">หน้าแรก</a></li>
-         <li role="presentation"><a href="/cpe_course">วิศวกรรมคอมพิวเตอร์</a></li>
-          <li role="presentation"><a href="/ske_course">วิศวกรรมซอร์ฟแวร์</a></li>
-        <li role="presentation"><a href="/about">เกี่ยวกับเรา</a></li>
-        <li role="presentation"><a href="/contact">ติดต่อเรา</a></li>
+    <ul class="nav navbar-nav ">
+        <li role="presentation "><a href="/ ">หน้าแรก</a></li>
+         <li role="presentation "><a href="/cpe_course ">วิศวกรรมคอมพิวเตอร์</a></li>
+          <li role="presentation "><a href="/ske_course ">วิศวกรรมซอร์ฟแวร์</a></li>
+          <li role="presentation "><a href="/admin_senior ">งานบริหาร</a></li>
+          <li role="presentation "><a href="/board_of_administrations ">คณะกรรมการบริหาร</a></li>
+          <li role="presentation "><a href="/department_head ">หัวหน้าภาควิชา</a></li>
+          <li role="presentation "><a href="/faculty_members ">ผู้ทรงคุณวุฒิ</a></li>
+          <li role="presentation "><a href="/overview ">ภาพรวม</a></li>
+          <li role="presentation "><a href="/research_areas_and_labs ">งานวิจัย</a></li>
+          <li role="presentation "><a href="/staff ">พนักงาน</a></li>
+          <li role="presentation "><a href="/activities ">กิจกรรม</a></li>
+        <li role="presentation "><a href="/about ">เกี่ยวกับเรา</a></li>
+        <li role="presentation "><a href="/contact ">ติดต่อเรา</a></li>
     </ul>
 </nav>
