--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -3,7 +3,7 @@
     <ul class="nav navbar-nav ">
         <li role="presentation "><a href="/ ">หน้าแรก</a></li>
         <li class="dropdown">
-        <a class="dropdown-toggle" data-toggle="dropdown" href="#"หลักสูตร
+        <a class="dropdown-toggle" data-toggle="dropdown" href="#">หลักสูตร
         <span class="caret"></span></a>
         <ul class="dropdown-menu">
           <li><a href="/cpe_course ">วิศวกรรมคอมพิวเตอร์</a></li>
