--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -4,21 +4,34 @@
         <ul class="nav navbar-nav navbar-right">
         <li role="presentation "><a href="/ ">หน้าแรก</a></li>
         <li class="dropdown">
-        <a class="dropdown-toggle" data-toggle="dropdown" href="#">หลักสูตร
-        <span class="caret"></span></a>
+        <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+        <span class="caret">หลักสูตร</span></a>
         <ul class="dropdown-menu">
           <li><a href="/cpe_course ">วิศวกรรมคอมพิวเตอร์</a></li>
           <li><a href="/ske_course ">วิศวกรรมซอร์ฟแวร์</a></li>
         </ul>
       </li>
+       <li class="dropdown">
+        <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+        <span class="caret">งานบริหาร</span></a>
+        <ul class="dropdown-menu">
           <li role="presentation "><a href="/admin_senior ">งานบริหาร</a></li>
           <li role="presentation "><a href="/board_of_administrations ">คณะกรรมการบริหาร</a></li>
           <li role="presentation "><a href="/department_head ">หัวหน้าภาควิชา</a></li>
           <li role="presentation "><a href="/faculty_members ">ผู้ทรงคุณวุฒิ</a></li>
-          <li role="presentation "><a href="/overview ">ภาพรวม</a></li>
-          <li role="presentation "><a href="/research_areas_and_labs ">งานวิจัย</a></li>
           <li role="presentation "><a href="/staff ">พนักงาน</a></li>
+        </ul>
+      </li>
+       <li class="dropdown">
+        <a class="dropdown-toggle" data-toggle="dropdown" href="#"><span class="caret">ภาพรวม</span></a>
+        <ul class="dropdown-menu">
+        <li role="presentation "><a href="/overview ">ภาพรวม</a></li>
+          <li role="presentation "><a href="/research_areas_and_labs ">งานวิจัย</a></li>
           <li role="presentation "><a href="/activities ">กิจกรรม</a></li>
+        </ul>
+      </li>
+          
+          
         <li role="presentation "><a href="/about ">เกี่ยวกับเรา</a></li>
         <li role="presentation "><a href="/contact ">ติดต่อเรา</a></li>
     </ul>
