--- a/app/views/static_pages/activities.html.erb
+++ b/app/views/static_pages/activities.html.erb
@@ -1,11 +1,11 @@
 <h1 class="post-title">Activities</h1>
 
-	<p><a href="https://www.cpe.ku.ac.th/?attachment_id=1502"><img class="img-responsive" src="https://www.cpe.ku.ac.th/wp-content/uploads/2015/03/activity_02.jpg" /></a><br
-		/>
+	<p>
+		<a href="https://www.cpe.ku.ac.th/?attachment_id=1502"><img class="img-responsive" src="https://www.cpe.ku.ac.th/wp-content/uploads/2015/03/activity_02.jpg" /></a>
+		<br>
 		<a href="https://www.cpe.ku.ac.th/?page_id=1309"><img class="img-responsive" src="https://www.cpe.ku.ac.th/wp-content/uploads/2015/03/activity_04.jpg"  /></a>
-		<a
-		 href="https://www.cpe.ku.ac.th/?page_id=1504"><img class="img-responsive" src="https://www.cpe.ku.ac.th/wp-content/uploads/2015/03/activity_01_edit1.jpg" 
-			 height="279" /></a>
+		<br>
+		<a href="https://www.cpe.ku.ac.th/?page_id=1504"><img class="img-responsive" src="https://www.cpe.ku.ac.th/wp-content/uploads/2015/03/activity_01_edit1.jpg"/></a>
 	</p>
 	<p>
 		<center><a href="https://www.cpe.ku.ac.th/?page_id=1274"><img class="img-responsive" src="https://www.cpe.ku.ac.th/wp-content/uploads/2015/03/btn_all_events.jpg" /></a></center>
