--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -4,16 +4,16 @@
         <ul class="nav navbar-nav navbar-right">
         <li role="presentation "><a href="/ ">หน้าแรก</a></li>
         <li class="dropdown">
-        <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-        <span class="caret">หลักสูตร</span></a>
+        <a class="dropdown-toggle" data-toggle="dropdown" href="#">หลักสูตร
+        <span class="caret"></span></a>
         <ul class="dropdown-menu">
           <li><a href="/cpe_course ">วิศวกรรมคอมพิวเตอร์</a></li>
           <li><a href="/ske_course ">วิศวกรรมซอร์ฟแวร์</a></li>
         </ul>
       </li>
        <li class="dropdown">
-        <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-        <span class="caret">งานบริหาร</span></a>
+        <a class="dropdown-toggle" data-toggle="dropdown" href="#">งานบริหาร
+        <span class="caret"></span></a>
         <ul class="dropdown-menu">
           <li role="presentation "><a href="/admin_senior ">งานบริหาร</a></li>
           <li role="presentation "><a href="/board_of_administrations ">คณะกรรมการบริหาร</a></li>
@@ -23,7 +23,7 @@
         </ul>
       </li>
        <li class="dropdown">
-        <a class="dropdown-toggle" data-toggle="dropdown" href="#"><span class="caret">ภาพรวม</span></a>
+        <a class="dropdown-toggle" data-toggle="dropdown" href="#">ภาพรวม<span class="caret"></span></a>
         <ul class="dropdown-menu">
         <li role="presentation "><a href="/overview ">ภาพรวม</a></li>
           <li role="presentation "><a href="/research_areas_and_labs ">งานวิจัย</a></li>
