--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,9 +1,17 @@
-<!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">-->
+# <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <nav class="navbar navbar-fixed-top" style="background-color: #89E894">
-   <div class="container">
-        <ul class="nav navbar-nav navbar-right">
-        <li role="presentation "><a href="/ ">หน้าแรก</a></li>
-        <li class="dropdown">
+  <div class="container">
+    <!--<ul class="nav navbar-nav">
+      <li class="presentation">
+        <img src="https://www.cpe.ku.ac.th/wp-content/uploads/2014/08/logo_blue2-1.jpg" alt="Department of Computer Engineering">
+      </li>
+    </ul>-->
+    <ul class="nav navbar-nav navbar-right">
+            <li class="presentation navbar-brand">
+        <img src="https://www.cpe.ku.ac.th/wp-content/uploads/2014/08/logo_blue2-1.jpg" alt="Department of Computer Engineering">
+      </li>
+      <li role="presentation "><a href="/ ">หน้าแรก</a></li>
+      <li class="dropdown">
         <a class="dropdown-toggle" data-toggle="dropdown" href="#">หลักสูตร
         <span class="caret"></span></a>
         <ul class="dropdown-menu">
@@ -11,7 +19,7 @@
           <li><a href="/ske_course ">วิศวกรรมซอร์ฟแวร์</a></li>
         </ul>
       </li>
-       <li class="dropdown">
+      <li class="dropdown">
         <a class="dropdown-toggle" data-toggle="dropdown" href="#">งานบริหาร
         <span class="caret"></span></a>
         <ul class="dropdown-menu">
@@ -22,19 +30,18 @@
           <li role="presentation "><a href="/staff ">พนักงาน</a></li>
         </ul>
       </li>
-       <li class="dropdown">
+      <li class="dropdown">
         <a class="dropdown-toggle" data-toggle="dropdown" href="#">ภาพรวม<span class="caret"></span></a>
         <ul class="dropdown-menu">
-        <li role="presentation "><a href="/overview ">ภาพรวม</a></li>
+          <li role="presentation "><a href="/overview ">ภาพรวม</a></li>
           <li role="presentation "><a href="/research_areas_and_labs ">งานวิจัย</a></li>
           <li role="presentation "><a href="/activities ">กิจกรรม</a></li>
         </ul>
       </li>
-          
-          
-        <li role="presentation "><a href="/about ">เกี่ยวกับเรา</a></li>
-        <li role="presentation "><a href="/contact ">ติดต่อเรา</a></li>
-    </ul>
-   </div>
-</nav>
 
+
+      <li role="presentation "><a href="/about ">เกี่ยวกับเรา</a></li>
+      <li role="presentation "><a href="/contact ">ติดต่อเรา</a></li>
+    </ul>
+  </div>
+</nav>
