fix board committy

--- a/app/views/static_pages/board_of_administrations.html.erb
+++ b/app/views/static_pages/board_of_administrations.html.erb
@@ -1,6 +1,6 @@
 <div class="post-content">
-	<table style="width: 100%;" border="0" cellspacing="0" cellpadding="0">
-		<tbody>
+	<table style="width: 100%;" border="0" cellspacing="0" cellpadding="0" >
+		<tbody align="center">
 			<tr>
 				<td colspan="4">&nbsp;&nbsp;&nbsp;<img
 					class="aligncenter wp-image-1650 size-full"
@@ -52,7 +52,7 @@
 		<strong>Department Committee</strong>
 	</p>
 	<table style="width: 100%;">
-		<tbody>
+		<tbody align="center">
 			<tr>
 				<td>
 					<a href="https://www.cpe.ku.ac.th/?page_id=665"><img
